--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,37 @@
-#home {
-  background: rgb(0, 101, 219);
-  background: linear-gradient(90deg, rgb(0,101,219) 50%, rgb(0,212,255,1) 100%);
- min-height:500px;
- color:white;
+
+.color {
+  margin-top: 50px;
+  background-color: rgb(112, 178, 245);
+}
+.col-md-3 {
+  margin-bottom: 20px;
+  
+}
+
+.card {
+  padding:10px;
+  border: solid 1px rgba(0,0,0,0.08);
+  cursor:pointer;
+  
+}
+
+.card:hover {
+  box-shadow: 0 0 12px 3px rgba(0,0,0, 0.08)
+}
+
+.card-text {
+  color: rgba(0,0,0, 0.6)
+}
+.card-title {
+  margin-top:20px;
+  white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+}
+
+.avatar {
+  width:100px;
+  height:150px;
+ 
+  margin:auto;
 }
