--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 
 .color {
-  margin-top: 50px;
+  margin-top: 100px;
   background-color: rgb(112, 178, 245);
 }
 .col-md-3 {
@@ -16,7 +16,7 @@
 }
 
 .card:hover {
-  box-shadow: 0 0 12px 3px rgba(0,0,0, 0.08)
+  box-shadow: 0 0 15px 5px rgba(0,0,0, 0.08)
 }
 
 .card-text {
@@ -35,3 +35,8 @@ text-overflow: ellipsis;
  
   margin:auto;
 }
+
+.star-color{
+  color:gold;
+}
+
